fix for message overflowing in IE10

--- a/public/bootstrap/less/trp3.less
+++ b/public/bootstrap/less/trp3.less
@@ -73,6 +73,7 @@ body {
 	/*overflow-x: hidden;*/
   background-color: white;
   .user-select(none);
+  font-family: sans-serif;
 }
 
 a {
@@ -1429,7 +1430,7 @@ ul li.placeholder:before {
 	text-align: center;
 /*	padding-top: 40px;*/
 	top: 0px;
-  bottom: 70px !important;
+  bottom: 70px;
   right: 0px;
   /* this min height isn't the best solution*/
   /* we need the content panel to take up the entire middle of the screen*/
